# task_decomposer

./: .env.example  .gitignore  README.md  custom_mascot.json  default_mascot.json  task_decomposer.py
config/user/demo/: config.json
config/user/demo/project/demo/main/: config.json
config/user/demo/project/demo/main/planning/: SKILL.md
config/user/demo/project/demo/sub-agent1/: config.json
config/user/demo/project/demo/sub-agent1/execution/: SKILL.md
config/user/demo/project/demo/sub-agent2/risk-review/: SKILL.md
config/user/demo/project/demo/sub-agent3/: config.json
gui_client/: CMakeLists.txt  configdialog.cpp  configdialog.h  mainwindow.cpp  mainwindow.h  relationshipline.cpp  relationshipline.h  taskcanvas.cpp  taskcanvas.h  taskcarditem.cpp  taskcarditem.h  taskdetailpanel.cpp  taskdetailpanel.h  theme.cpp  theme.h
project/config/demo/sub-agent2/: config.json
runtime/user/demo/project/demo/cache/: search.json
runtime/user/demo/project/demo/conversation/: default.jsonl
runtime/user/demo/project/demo/log/: runs.jsonl
runtime/user/demo/project/demo/output/: 20260523T172638992505Z.json  20260523T172638992505Z.md  20260523T172717237155Z.json  20260523T172717237155Z.md  20260523T172739162353Z.json  20260523T172739162353Z.md  index.json
scripts/: debug_input.py  smoke_test.py
skills/global/learning/: SKILL.md
skills/global/project/: SKILL.md
skills/global/writing/: SKILL.md
skills/project/demo/sub-agent3/user-value/: SKILL.md
task_decomposer_app/: agent.py  bootstrap.py  cli.py  cli_renderer.py  config.py  core_engine.py  gui_backend.py  llm.py  mascot.py  models.py  project.py  runtime.py  search.py  skills.py  terminal_input.py  utils.py
